Fixes typo in README

--- a/README
+++ b/README
@@ -143,7 +143,7 @@ SETUP:
 
     Keybase:
         https://keybase.io/docs/command_line
-        Make sure you sign into Keybase and the client it up.
+        Make sure you sign into Keybase and the client is up.
 
     Credentials:
         Setup a Twitter account, create an application and generate
