--- a/README
+++ b/README
@@ -162,7 +162,7 @@ SETUP:
             "twitter": {
                 "consumer-key": "twitter-app-consumer-key",
                 "consumer-secret": "twitter-app-consumer-secret",
-                "access-token": "twitter-app-access-token"
+                "access-token": "twitter-app-access-token",
                 "access-token-secret": "twitter-app-access-token-secret"
             }
         }
